# ecommerce-scraping

./: .env-example  README.md  docker-compose.yml  main.py  products.db  pyproject.toml
scraping/: config.py  models.py
scraping/bot/: notifications.py  telegram.py
scraping/db/: analytics.py  connection.py  repository.py  setup.py
scraping/fetcher/: client.py  headers.py
scraping/parsers/: listing.py  product.py
