[project]
name = "ecommerce-scraping"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaique Reis",email = "kreis1265@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
